@@ -4,6 +4,8 @@ osha.policy Changelog
 1.3.36 (unreleased)
 -------------------
 
+- added increase for resource registry cache duration, work for #3204
+  [pilz]
 - generateHW2010PDF: we need to escape the company name, since pure & characters
   will cause reportlab to puke, fixes #3213 [thomasw]
 
